Fix #541
Also removed capacity to keep track of where a unit comes from, or goes to